--- a/1_1_zhigong6.html
+++ b/1_1_zhigong6.html
@@ -2,118 +2,199 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>五小三园建设 - 铁越集团</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>五小三园建设 - 铁越集团</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/zhigong/zhilist_02.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/zhigong/zhilist_02.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>“五小”“三园”建设</h3>
-              
-            </div>
-
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>“五小”“三园”建设</h3>
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">集团工会不断加大对“五小”“三园”建设的投资和管理力度，共完成“五小”“三园”改造及建设项目上百个，实现全覆盖成规模，让职工切实受益。
                 </span>
-              </p>
-            </div>
-
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <div class="col-1-2-top">
-                  <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/zhigong6/i1.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/wuximg_03.png"> </a></div>
-                  <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/zhigong6/i6.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/wuximg_05.png"> </a></div>
-                  <div class="width-1-5">
-                    <div class="col-1-2-top"><a href="images/zhigong6/i2.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/wuximg_07.png"> </a>
+                        </p>
                     </div>
-                    <div class="col-1-2-bottom"><a href="images/zhigong6/i5.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/wuximg_10.png"> </a>
-                    </div>
-                  </div>
                 </div>
-                <div class="col-1-2-bottom">
-                  <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/zhigong6/i3.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/wuximg_14.png"> </a></div>
-                  <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/zhigong6/i7.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/wuximg_15.png"> </a></div>
-                  <div class="width-1-5">
-                    <div class="col-1-2-top"><a href="images/zhigong6/i4.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/wuximg_16.png"> </a>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
                     </div>
-                    <div class="col-1-2-bottom"><a href="images/zhigong6/i8.jpg" data-lightbox="lightbox" ><img src="./images/zhigong/wuximg_18.png"> </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
+                            <div class="width-3-5">
+                                <div class="width-1-2">
+                                    <div class="height-1-2">
+                                        <a href="images/zhigong6/i1.jpg" data-lightbox="lightbox">
+                                            <img src="./images/zhigong/wuximg_03.png"> </a>
+                                    </div>
+                                    <div class="height-1-2">
+                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                            <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                                <div class="width-1-2">
+                                    <div class="height-1-2">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="height-1-2">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                            </div>
 
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/zhigong6/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong6/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong6/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong6/i4.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong6/i5.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong6/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong6/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/zhigong6/i8.jpg">	</div>
+                            <div class="width-2-5">
+                                <div class="width-1-2">
+                                    <div class="height-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="height-1-3">
+                                        <a href="images/zhigong6/i5.jpg" data-lightbox="lightbox">
+                                            <img src="./images/zhigong/wuximg_10.png"> </a>
+                                    </div>
+                                    <div class="height-1-3">
+                                        <a href="images/zhigong6/i8.jpg" data-lightbox="lightbox">
+                                            <img src="./images/zhigong/wuximg_18.png"> </a>
+                                    </div>
+                                </div>
+                                <div class="width-1-2">
+                                    <div class="height-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="height-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="height-1-3">
+                                        <a href="images/zhigong6/i4.jpg" data-lightbox="lightbox">
+                                            <img src="./images/zhigong/wuximg_16.png"> </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!--<div class="col-1-2-top">-->
+                                <!--<div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/zhigong6/i1.jpg"-->
+                                                                                       <!--data-lightbox="lightbox"><img-->
+                                        <!--src="./images/zhigong/wuximg_03.png"> </a></div>-->
+                                <!--<div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/zhigong6/i6.jpg"-->
+                                                                                       <!--data-lightbox="lightbox"><img-->
+                                        <!--src="./images/zhigong/wuximg_05.png"> </a></div>-->
+                                <!--<div class="width-1-5">-->
+                                    <!--<div class="col-1-2-top"><a href="images/zhigong6/i2.jpg"-->
+                                                                <!--data-lightbox="lightbox"><img-->
+                                            <!--src="./images/zhigong/wuximg_07.png"> </a>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-1-2-bottom"><a href="images/zhigong6/i5.jpg"-->
+                                                                   <!--data-lightbox="lightbox"><img-->
+                                            <!--src="./images/zhigong/wuximg_10.png"> </a>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="col-1-2-bottom">-->
+                                <!--<div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/zhigong6/i3.jpg"-->
+                                                                                       <!--data-lightbox="lightbox"><img-->
+                                        <!--src="./images/zhigong/wuximg_14.png"> </a></div>-->
+                                <!--<div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/zhigong6/i7.jpg"-->
+                                                                                       <!--data-lightbox="lightbox"><img-->
+                                        <!--src="./images/zhigong/wuximg_15.png"> </a></div>-->
+                                <!--<div class="width-1-5">-->
+                                    <!--<div class="col-1-2-top"><a href="images/zhigong6/i4.jpg"-->
+                                                                <!--data-lightbox="lightbox"><img-->
+                                            <!--src="./images/zhigong/wuximg_16.png"> </a>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-1-2-bottom"><a href="images/zhigong6/i8.jpg"-->
+                                                                   <!--data-lightbox="lightbox"><img-->
+                                            <!--src="./images/zhigong/wuximg_18.png"> </a>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+
+                        </div>
+
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/zhigong6/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i7.jpg"></div>
+                                <div class="swiper-slide"><img src="images/zhigong6/i8.jpg"></div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-              </div>
+
             </div>
-
-          </div>
 
         </div>
-
-      </div>
     </div>
-  </div>
-  <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+</div>
+<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
     <div class="content">
-      <div class="col-md-3 leftpart">
-        <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-          <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-          <span>		视频 </span>
-        </a>
-      </div>
-
-      <div class="col-md-9 rightpart" >
-        <div class="pull-right">
-          <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1" > 返回 </a>
-          <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-          <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-          <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/11五小三园建设.ogg" type="audio/ogg" />
-          </audio>
+        <div class="col-md-3 leftpart">
+            <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                <span>		视频 </span>
+            </a>
         </div>
-      </div>
-    </div>
-  </nav>
 
-  <!-- Modal -->
+        <div class="col-md-9 rightpart">
+            <div class="pull-right">
+                <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1"> 返回 </a>
+                <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
+                                                                                  aria-hidden="true"></span> </a>
+                <audio id="audio-js" class="audio-js">
+                    <source src="audios/party/11五小三园建设.ogg" type="audio/ogg"/>
+                </audio>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<!-- Modal -->
 
 </div>
 <script src="scripts/jquery-1.9.1.min.js"></script>
