--- a/tss_11.html
+++ b/tss_11.html
@@ -49,39 +49,39 @@
                     </div>
                     <div id="image_list" class=" bodypart">
                         <div class="grid" style="height:100%;display:none;">
-                            <div class="width-2-3" style="padding: 0 5px 0  0;">
+                            <div class="width-2-3" style="padding: 0 8px 0  0;">
                                 <a href="images/tss11/i6.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tss11/i6_s.jpg" class="img-fullw" style=""></a>
+                                        src="./images/tss11/i6s.jpg" class="img-fullh" style=""></a>
                             </div>
 
-                            <div class="width-1-3" style="padding: 0  0  0 5px;">
+                            <div class="width-1-3" style="padding: 0">
                                 <div class="width-1-2">
-                                    <div class="height-1-3">
+                                    <div class="height-1-3" style=" padding: 0 8px 8px 0">
                                         <a href="images/tss11/i1.jpg" data-lightbox="lightbox">
-                                            <img src="./images/tss11/tss-01.png" style="height:100%;padding: 0 8px 8px 0"></a>
+                                            <img src="./images/tss11/tss-01.png" class="img-fullh" ></a>
                                     </div>
-                                    <div class="height-1-3">
+                                    <div class="height-1-3" style=" padding: 0 8px 8px 0;">
                                         <a href="images/tss11/i2.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss11/tss-02.png" style="height:100%;padding: 0 8px 8px 0;"></a>
+                                                src="./images/tss11/tss-02.png" class="img-fullh"></a>
                                     </div>
-                                    <div class="height-1-3">
-                                        <a href="images/tss11/d-03.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tss11/tss-03.png" style="height:100%;padding: 0 8px 0 0;"></a>
+                                    <div class="height-1-3" style="padding: 0 8px 0 0;">
+                                        <a href="images/tss11/i5.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss11/i5s.png" class="img-fullh"></a>
                                     </div>
                                 </div>
                                 <div class="width-1-2">
-                                    <div class="height-1-3">
+                                    <div class="height-1-3" style="padding-bottom: 8px;">
                                         <a href="images/tss11/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss11/i3_s.jpg" style="height:100%;width:auto;padding-bottom: 8px;"></a>
+                                                src="./images/tss11/i3_s.jpg" class="img-fullw"></a>
 
                                     </div>
-                                    <div class="height-1-3">
+                                    <div class="height-1-3" style="padding-bottom: 8px;">
                                         <a href="images/tss11/i9.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;padding-bottom: 8px;"></a>
+                                        src="./images/tss11/i9_s.jpg" class="img-fullh" ></a>
                                     </div>
                                     <div class="height-1-3">
-                                        <a href="images/tss11/d-04.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss11/tss-04.png" style="height:100%;width:auto;"></a>
+                                        <a href="images/tss11/i7.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss11/i7s.png" class="img-fullh"></a>
                                     </div>
                                 </div>
                             </div>
@@ -93,6 +93,8 @@
                                 <div class="swiper-slide"><img src="images/tss11/i1.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss11/i2.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss11/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss11/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss11/i7.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss11/i9.jpg"></div>
                                 <div class="swiper-slide"><img src="images/tss11/i1.jpg"></div>
                             </div>
