--- a/1_1_jiandang8.html
+++ b/1_1_jiandang8.html
@@ -2,142 +2,164 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>典型示范-铁越集团</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
-  <script>
-    g_autoplay = 4000;
-  </script>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>典型示范-铁越集团</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
+    <script>
+        g_autoplay = 4000;
+    </script>
 </head>
 <body>
-  <div class="page jiandang8 tdc-detail">
+<div class="page jiandang8 tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/jiandang/yinlimg_02.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/jiandang/yinlimg_02.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>典型示范</h3>
-
-            </div>
-
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>典型示范</h3>
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">集团公司党委坚持发挥党组织的政治核心作用、党支部的战斗堡垒作用和党员的先锋模范作用，带领干部职工转变观念、开拓创新，着力打造铁越物流“TDC”、社会服务“TSS”、铁越地产“TRE”三大品牌，在“转型发展，二次创业”主战场上，培育出一大批令人振奋、值得颂扬的先进集体和优秀典型。
                 </span>
-              </p>
-            </div>
-
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <div class="col-1-2-top"> <!--一半高度-->
-                  <!--40%的宽度-->
-                  <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i6.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_08.png"> </a></div>
-                  <div class="width-3-5">
-                    <div class="col-1-2-top">
-                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a></div>
-                      <!--<div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_15.png"> </a></div>-->
-                      <div class="width-1-3" style="padding: 0 16px 0 0"><a href="images/jiangdang8/i9.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i9.jpg" class="img-fullh"> </a></div>
-                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a></div>
+                        </p>
                     </div>
-                    <div class="col-1-2-bottom">
-                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i8.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_11.png"> </a></div>
-                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i7.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_18.png"> </a></div>
-                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i4.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_21.png"> </a></div>
+
+                </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
                     </div>
-                  </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
+                            <div class="col-1-2-top"> <!--一半高度-->
+                                <!--40%的宽度-->
+                                <div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/jiangdang8/i6.jpg"
+                                                                                       data-lightbox="lightbox"><img
+                                        src="./images/jiandang/cylist_08.png"> </a></div>
+                                <div class="width-3-5">
+                                    <div class="col-1-2-top">
+                                        <div class="width-1-3" style="padding: 0 16px 0 0"><a
+                                                href="images/jiangdang8/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/jiandang/cylist_05.png"> </a></div>
+                                        <!--<div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_15.png"> </a></div>-->
+                                        <div class="width-1-3" style="padding: 0 16px 0 0"><a
+                                                href="images/jiangdang8/i9.jpg" data-lightbox="lightbox"><img
+                                                src="./images/jiangdang8/i9.jpg" class="img-fullh"> </a></div>
+                                        <div class="width-1-3" style="padding: 0 16px 0 0"><a
+                                                href="images/jiangdang8/典型示范大图-05.jpg" data-lightbox="lightbox"><img
+                                                src="./images/jiandang/典型示范小图-05.jpg"> </a></div>
+                                    </div>
+                                    <div class="col-1-2-bottom">
+                                        <div class="width-1-3" style="padding: 0 16px 0 0"><a
+                                                href="images/jiangdang8/i8.jpg" data-lightbox="lightbox"><img
+                                                src="./images/jiandang/cylist_11.png"> </a></div>
+                                        <div class="width-1-3" style="padding: 0 16px 0 0"><a
+                                                href="images/jiangdang8/i7.jpg" data-lightbox="lightbox"><img
+                                                src="./images/jiandang/cylist_18.png"> </a></div>
+                                        <div class="width-1-3" style="padding: 0 16px 0 0"><a
+                                                href="images/jiangdang8/i4.jpg" data-lightbox="lightbox"><img
+                                                src="./images/jiandang/cylist_21.png"> </a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-1-2-bottom">
+                                <div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/jiangdang8/i5.jpg"
+                                                                                       data-lightbox="lightbox"><img
+                                        src="./images/jiandang/cylist_16.png"> </a></div>
+                                <div class="width-2-5" style="padding:0 16px  0 0;"><a href="images/jiangdang8/典型示范大图-11.jpg"
+                                                                                       data-lightbox="lightbox"><img
+                                        src="./images/jiandang/典型示范小图-11.jpg"> </a></div>
+                                <div class="width-1-5" style="padding: 0 16px 0 0">
+                                    <div class="col-1-2-top" style="padding: 0 0 8px 0"><a
+                                            href="images/jiangdang8/i10.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiangdang8/i10.jpg" class="img-fullh"> </a></div>
+                                    <div class="col-1-2-top" style="padding: 8px 0 0 0"><a
+                                            href="images/jiangdang8/i11.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiangdang8/i11.jpg" class="img-fullh"> </a></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <!--<div class="swiper-slide"><img src="images/jiangdang8/i1.jpg"></div>-->
+                                <!--<div class="swiper-slide"><img src="images/jiangdang8/i2.jpg"></div>-->
+                                <div class="swiper-slide"><img src="images/jiangdang8/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i7.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i9.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i12.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/典型示范大图-11.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i6.jpg"></div>
+                                <!--<div class="swiper-slide"><img src="images/jiangdang8/i1.jpg"></div>-->
+                            </div>
+                        </div>
+
+                        <ul class="jiandanglist2">
+                            <li><img src="./images/jiandang/cylist_08.png"></li>
+                            <li><img src="./images/jiandang/cylist_03.png"></li>
+                            <li style="clear:both"><img src="./images/jiandang/cylist_15.png"></li>
+                            <li><img src="./images/jiandang/cylist_16.png"></li>
+
+                        </ul>
+                        <ul class="jiandanglist4">
+                            <li><img src="./images/jiandang/cylist_05.png"></li>
+                            <li><img src="./images/jiandang/cylist_11.png"></li>
+                            <li><img src="./images/jiandang/cylist_18.png"></li>
+                            <li><img src="./images/jiandang/cylist_21.png"></li>
+                        </ul>
+                    </div>
 
                 </div>
-                <div class="col-1-2-bottom">
-                  <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_15.png"> </a></div>
-                  <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i5.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_16.png"> </a></div>
-                  <div class="width-1-5" style="padding: 0 16px 0 0">
-                    <div class="col-1-2-top" style="padding: 0 0 8px 0"><a href="images/jiangdang8/i10.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i10.jpg" class="img-fullh"> </a></div>
-                    <div class="col-1-2-top" style="padding: 8px 0 0 0"><a href="images/jiangdang8/i11.jpg" data-lightbox="lightbox" ><img src="./images/jiangdang8/i11.jpg" class="img-fullh"> </a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i4.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i5.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i8.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i9.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i12.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiangdang8/i1.jpg">	</div>
-                </div>
-              </div>
 
-              <ul class="jiandanglist2">
-                <li><img src="./images/jiandang/cylist_08.png"></li>
-                <li><img src="./images/jiandang/cylist_03.png"></li>
-                <li style="clear:both"><img src="./images/jiandang/cylist_15.png"></li>
-                <li><img src="./images/jiandang/cylist_16.png"></li>
-
-              </ul>
-              <ul class="jiandanglist4">
-                <li><img src="./images/jiandang/cylist_05.png"></li>
-                <li><img src="./images/jiandang/cylist_11.png"></li>
-                <li><img src="./images/jiandang/cylist_18.png"></li>
-                <li><img src="./images/jiandang/cylist_21.png"></li>
-              </ul>
             </div>
-
-          </div>
 
         </div>
-
-      </div>
     </div>
-  </div>
-  <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+</div>
+<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
     <div class="content">
-      <div class="col-md-3 leftpart">
-        <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-          <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-          <span>		视频 </span>
-        </a>
-      </div>
-
-      <div class="col-md-9 rightpart" >
-        <div class="pull-right">
-          <a class="back-btn ctl_btn" href="1_1_jiandang1.html?noaudio=1"> 返回 </a>
-          <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-          <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-          <audio id="audio-js"  class="audio-js">
-            <source src="audios/zhigong/典型示范.ogg" type="audio/ogg" />
-          </audio>
+        <div class="col-md-3 leftpart">
+            <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                <span>		视频 </span>
+            </a>
         </div>
-      </div>
-    </div>
-  </nav>
 
-  <!-- Modal -->
+        <div class="col-md-9 rightpart">
+            <div class="pull-right">
+                <a class="back-btn ctl_btn" href="1_1_jiandang1.html?noaudio=1"> 返回 </a>
+                <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
+                                                                                  aria-hidden="true"></span> </a>
+                <audio id="audio-js" class="audio-js">
+                    <source src="audios/zhigong/典型示范.ogg" type="audio/ogg"/>
+                </audio>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<!-- Modal -->
 
 </div>
 <script src="scripts/jquery-1.9.1.min.js"></script>
